--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask Hola</title>
+    <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.prod.js"></script>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <p>Hola, Sosua Mi Pueblo, Version 001</p>
+    <div id="app">
+        <component-a></component-a>
+    </div>
+
+    <script type="text/javascript" charset="utf-8" src="static/js/index.js"></script>
 </body>
 </html>
